# gb8x8

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  opcode_converter.py
lib/: CMakeLists.txt
lib/glad/glad/: gl.h
src/: cpu.c  cpu.h  debugger.c  gb8x8.h  graphics.c  graphics.h  main.c  operations.c  operations.h  ppu.c  ppu.h  rom_loader.c
